fixing the host

--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-<p>portfolio</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Jovon Baker - Portfolio</title>
+  <link type="text/css" rel="stylesheet" href="stylesheets/normalize.css"> 
+    <!--The link above called "normalize" goes to a CSS page that reset all of the browser defaults. Needs to be on Every Page-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!--This is the link to the Bootstrap file, via CDN. This means you don't have to download it, it accesses a CSS page from the internet-->
+  <link type="text/css" rel="stylesheet" href="stylesheets/landing.css">
+    <!--This files goes to the CSS page I provided for the landing page. You can Open it as an example, but DO NOT EDIT IT! Any changes should go on a different CSS document-->
+  <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
+    <!--This file will be the one that you customize yourself, with your own code.-->
+  <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+      <!--This link is for the google fonts API, which lets you customize .-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    
+</head>
+<body>
+  <div class="jumbotron">
+      <div class="portrait_name">
+        <img class="portrait" src="http://i1379.photobucket.com/albums/ah144/jbaker3/6b04775a-5a8b-401b-9c12-c8a1b254b6ab_zpsp1xo9apz.jpg">
+        <h2>Jovon Baker</h2>
+        <p>Computer Science<br>
+          Chicago Tech Academy</p>
+      </div>
+  </div>
+
+<content>
+    <article>
+        <h2>My Name is Jovon Baker</h2>
+        <p>I am a student at Chicago Tech Academy. I like to play sports, I love to travel and seeing new things. My favorite subject is biology I like to learn about the life in all its forms.</p>.</p>
+    </article>
+
+<div class="thumbnail_space">
+<div class="row">
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href="_blank" href="art.html"><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/cbc03837-07ca-4192-8695-0c8bd281e376_zps04syz6ae.jpg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Art</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8f5da603-742c-411c-b5d4-3d012b31b911_zpsu1dknagd.jpg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Spanish</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="200x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/41819fa4-217e-481c-9870-83d158bfaeed_zpszuxce0rf.png" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>English 3</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8bcaeba5-bb47-4faf-8045-e3c03684b0a5_zpsgoteqcx1.jpg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Music</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/Jbaker%20-%20Untitled%20Page_zpssetkpm5z.jpeg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>MMA 2</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/140b0c81-b78b-4ab4-9d30-8c534ff34a86_zps49f1ufie.jpg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Chemisrty</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+                         
+        </div>
+    </div>
+</div>
+
+</div> <!--End of Row-->
+</div><!--End of thumbnail_space-->
+</content>
+
+<footer>
+    Footer
+</footer>
+<!--This stuff is the javascript information. The top is for jQuery, the second is Bootstrap, and the 3rd is one one you will edit-->
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
+</body>
