--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>I am a student at Chicago Tech Academy. I like to play sports, I love to travel and seeing new things. My favorite subject is biology I like to learn about the life in all its forms.</p>.</p>
     </article>
 
-<div class="thumbnail_space">
+<div class="Art">
 <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
@@ -42,9 +42,7 @@
             <div class="caption">
                  <h3>Art</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>In art we were assigned to create a art installation for the school exhibition.</p>
 
             </div>
         </div>
@@ -55,9 +53,7 @@
             <div class="caption">
                  <h3>Spanish</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>Spanish we were assigned to look in the Mexican culture and see how Mexicans feel about the dead.</p>
 
             </div>
         </div>
@@ -66,11 +62,9 @@
         <div class="thumbnail">
           <a target="_blank" href=""><img  alt="200x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/41819fa4-217e-481c-9870-83d158bfaeed_zpszuxce0rf.png" class="thumbnail_image img-responsive"></a>
             <div class="caption">
-                 <h3>English 3</h3>
+                 <h3>English3</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>English 3 we created our defining moment in our life.</p>
 
                           </div>
         </div>
@@ -81,9 +75,7 @@
             <div class="caption">
                  <h3>Music</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>Music we compose a beat using Garage Band.</p>
 
                           </div>
         </div>
@@ -92,11 +84,9 @@
         <div class="thumbnail">
           <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/Jbaker%20-%20Untitled%20Page_zpssetkpm5z.jpeg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
-                 <h3>MMA 2</h3>
+                 <h3>MMA2</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>We were assigned to use a picture of yourself and make a quote.</p>
 
                           </div>
         </div>
@@ -107,9 +97,7 @@
             <div class="caption">
                  <h3>Chemisrty</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p> We had to put a element on the periodic table and draw out the element.</p>
 
                           </div>
                          
