--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="caption">
                  <h3>Spanish</h3>
 
-                <p>Spanish we were assigned to look in the Mexican culture and see how Mexicans feel about the dead.</p>
+                <p>Spanish we were assigned to look in the Mexican culture and see how Mexicans feel about they family member or someone died.</p>
 
             </div>
         </div>
