--- a/template.html
+++ b/template.html
@@ -12,7 +12,8 @@
     <title>Small Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 
     <!-- Custom CSS -->
     <link href="stylesheets/small-business.css" rel="stylesheet">
@@ -29,7 +30,7 @@
 
 <body>
 
-    <!-- Navigation -->
+ <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -41,20 +42,23 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="http://placehold.it/150x50&text=Logo" alt="">
+                    
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#">Art.html</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Music.html</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">English3.html</a>
+                    </li>
+                    <li>
+                        <a href="#">Spanish.html</a>
                     </li>
                 </ul>
             </div>
@@ -69,13 +73,15 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" alt="">
+                <img class="http://noupe.com/img/beautiful-background-20.jpg" alt="">
             </div>
             <!-- /.col-md-8 -->
+            <content>
             <div class="col-md-4">
-                <h1>Business Name or Tagline</h1>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+                <img class="portrait" src="http://i1379.photobucket.com/albums/ah144/jbaker3/a582355f-b6f3-453b-b2c3-3a653c13dab2_zpsn6kitjsk.jpg">
+                <h1>Jovon Baker</h1>
+                <p>Computer Science</p>
+                <a class="btn btn-primary btn-lg" href="#"></a>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -87,7 +93,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    This is a well that is a great spot for a business tagline or phone number for easy access!
+        
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -97,27 +103,40 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+                <h2>My Name is Jovon Baker</h2>
+                <p>I am a student at Chicago Tech Academy. I like to play sports, I love to travel and seeing new things. My favorite subject is biology and I really love food and video games.</p>
+                <a class="btn btn-default" href="#"></a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+                          <h2>Art</h2>
+                          <a target="_blank" href="_blank" href="art.html"><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/cbc03837-07ca-4192-8695-0c8bd281e376_zps04syz6ae.jpg" class="thumbnail_image img-responsive"></a>
+                <p>In art we were assigned to create a art installation for the school exhibition.</p>
+                <a class="btn btn-default" href="art.html">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+                <h2>Music</h2>
+                <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8bcaeba5-bb47-4faf-8045-e3c03684b0a5_zpsgoteqcx1.jpg" class="thumbnail_image img-responsive"></a>
+                <p>Music we compose a beat using Garage Band </p>
+                <a class="btn btn-default" href="music.html">More Info</a>
             </div>
             <!-- /.col-md-4 -->
-        </div>
-        <!-- /.row -->
+           <div class="col-md-4">
+                 <h2>English 3</h2>
+               <a target="_blank" href=""><img  alt="200x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/41819fa4-217e-481c-9870-83d158bfaeed_zpszuxce0rf.png" class="thumbnail_image img-responsive"></a>
+                <p>English 3 we created our defining moment in our life. </p>
+                <a class="btn btn-default" href="English3.html">More Info</a>
+            </div>
+    <div class="col-md-4">
+        <h2>Spanish</h2>
+         <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8f5da603-742c-411c-b5d4-3d012b31b911_zpsu1dknagd.jpg" class="thumbnail_image img-responsive"></a>
+                <p>Spanish we were assigned to look in the Mexican culture and see how Mexicans feel about they family member or someone died.</p>
+                <a class="btn btn-default" href="Spanish.html">More Info</a>
+            </div>
+                          </div>
+</content>
 
-        <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
