Final Project Turn In

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8f5da603-742c-411c-b5d4-3d012b31b911_zpsu1dknagd.jpg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="Spanish.html"><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8f5da603-742c-411c-b5d4-3d012b31b911_zpsu1dknagd.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>Spanish</h3>
 
@@ -60,7 +60,7 @@
     </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="200x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/41819fa4-217e-481c-9870-83d158bfaeed_zpszuxce0rf.png" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="English3.html"><img  alt="200x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/41819fa4-217e-481c-9870-83d158bfaeed_zpszuxce0rf.png" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>English3</h3>
 
@@ -71,7 +71,7 @@
     </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8bcaeba5-bb47-4faf-8045-e3c03684b0a5_zpsgoteqcx1.jpg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="Music.html"><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8bcaeba5-bb47-4faf-8045-e3c03684b0a5_zpsgoteqcx1.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>Music</h3>
 
@@ -80,37 +80,14 @@
                           </div>
         </div>
     </div>
-    <div class="col-sm-6 col-md-6">
-        <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/Jbaker%20-%20Untitled%20Page_zpssetkpm5z.jpeg" class="thumbnail_image img-responsive"></a>
-            <div class="caption">
-                 <h3>MMA2</h3>
 
-                <p>We were assigned to use a picture of yourself and make a quote.</p>
-
-                          </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-6">
-        <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/140b0c81-b78b-4ab4-9d30-8c534ff34a86_zps49f1ufie.jpg" class="thumbnail_image img-responsive"></a>
-            <div class="caption">
-                 <h3>Chemisrty</h3>
-
-                <p> We had to put a element on the periodic table and draw out the element.</p>
-
-                          </div>
-                         
-        </div>
-    </div>
-</div>
 
 </div> <!--End of Row-->
 </div><!--End of thumbnail_space-->
 </content>
 
 <footer>
-    Footer
+   Jovon Baker
 </footer>
 <!--This stuff is the javascript information. The top is for jQuery, the second is Bootstrap, and the 3rd is one one you will edit-->
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
