--- a/template.html
+++ b/template.html
@@ -140,7 +140,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Jovon Baker</p>
                 </div>
             </div>
         </footer>
