--- a/art.html
+++ b/art.html
@@ -50,6 +50,7 @@
           To improve our project,  I would change the length of the project because it wasn't planned well.  We had to rush at the end of the project to install the final pieces including the painting, branches, and lighting. I would also change roles of the project because I kind of forgot to take photos and video and that was kind of major to the project. Last thing, I would change was not let Michael be the the speaker at exhibition he was making everything about himself.
             I learned that there is more to art than drawing and painting. Art is a way people can express themselves. anything people expression themselves using anything. Art can be a gift people give to the world, sharing their imagination? Gift that people have to expression their imagination to the world.  </p>
     </body>
+    </html>
     
 
     
