--- a/template.html
+++ b/template.html
@@ -135,6 +135,19 @@
                 <a class="btn btn-default" href="Spanish.html">More Info</a>
             </div>
                           </div>
+                              <div class="row">
+            <div class="col-md-4">
+                <h2>My Name is Jovon Baker</h2>
+                <p>I am a student at Chicago Tech Academy. I like to play sports, I love to travel and seeing new things. My favorite subject is biology and I really love food and video games.</p>
+                <a class="btn btn-default" href="#"></a>
+            </div>
+            <!-- /.col-md-4 -->
+            <div class="col-md-4">
+                          <h2>Spanish Fitness Project</h2>
+                          <a target="_blank" href="_blank" href="art.html"><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/cbc03837-07ca-4192-8695-0c8bd281e376_zps04syz6ae.jpg" class="thumbnail_image img-responsive"></a>
+                <p>We chose our on groups for this project and we choose a topic which was asthma and we created a game board similar to candyland. The game board is called Trap of the Lungs.</p>
+                <a class="btn btn-default" href="art.html">More Info</a>
+            </div>
 </content>
 
         <footer>
