--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
                 <p>Music we compose a beat using Garage Band.</p>
 
                           </div>
+                              <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href="Music.html"><img  alt="300x200" src="http://i1379.photobucket.com/albums/ah144/jbaker3/8bcaeba5-bb47-4faf-8045-e3c03684b0a5_zpsgoteqcx1.jpg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Spanish Fitness Project</h3>
+
+                <p>We chose our on groups for this project and we choose a topic which was asthma and we created a game board similar to candyland. The game board is called Trap of the Lungs.</p>
+
+                          </div>
         </div>
     </div>
 
